--- a/build.gradle
+++ b/build.gradle
@@ -20,19 +20,20 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.azure.spring:spring-cloud-azure-starter'
 	implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory'
 	implementation 'com.azure.spring:spring-cloud-azure-starter-data-cosmos'
 	implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault'
 	implementation 'com.azure.spring:spring-cloud-azure-starter-storage'
-	implementation 'org.liquibase:liquibase-core'
+//	implementation 'org.liquibase:liquibase-core'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'jakarta.persistence:jakarta.persistence-api'
+	runtimeOnly 'com.h2database:h2'
 }
 
 dependencyManagement {
