allow /h2-console path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.contextPath=/api
+
 logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
@@ -6,9 +8,9 @@ logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
 spring.reactor.debug-agent.enabled=true
 
 # Datasource
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
+spring.datasource.username=sa
 spring.datasource.password=password
 
 spring.h2.console.enabled=true
@@ -19,5 +21,13 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-spring.security.user.name=root
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# jdbc.X
+jdbc.driverClassName=org.h2.Driver
+jdbc.url=jdbc:h2:file:~/test;DB_CLOSE_DELAY=-1
+jdbc.user=sa
+jdbc.pass=password
+
+spring.security.user.name=sa
 spring.security.user.password=password
