--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'com.zkpytug.com'
+group = 'com.zkpytug'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -34,6 +34,19 @@ dependencies {
 
 	implementation 'jakarta.persistence:jakarta.persistence-api'
 	runtimeOnly 'com.h2database:h2'
+
+	implementation 'org.springframework.retry:spring-retry'
+	implementation 'mysql:mysql-connector-java:8.0.26'
+	implementation 'com.google.code.gson:gson'
+	implementation group: 'io.swagger', name: 'swagger-annotations', version: '2.0.0-rc1'
+	implementation 'org.springframework.boot:spring-boot-starter-json'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
+	implementation 'org.projectlombok:lombok'
+	implementation 'com.google.guava:guava:33.0.0-jre'
+	implementation 'net.sourceforge.htmlunit:htmlunit'
+	implementation 'org.modelmapper:modelmapper:3.2.0'
+
 }
 
 dependencyManagement {
