--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,14 +10,9 @@ spring.reactor.debug-agent.enabled=true
 spring.security.user.name=sa
 spring.security.user.password=password
 
-# Datasource
-spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_DELAY=-1
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=create-drop
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
