--- a/src/main/resources/persistence-h2.properties
+++ b/src/main/resources/persistence-h2.properties
@@ -1,5 +1,8 @@
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
