--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -1,3 +1,5 @@
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 # Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/elastic_ledger?createDatabaseIfNotExist=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
