add MS SQL dataSource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,7 @@ spring.reactor.debug-agent.enabled=true
 spring.security.user.name=sa
 spring.security.user.password=password
 
-
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=create
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
 
