--- a/src/main/resources/persistence-dev.properties
+++ b/src/main/resources/persistence-dev.properties
@@ -1,11 +1,13 @@
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/elastic_ledger?createDatabaseIfNotExist=true
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=jdbc:sqlserver://sql-rcit-rhk-ucp-dev-01.database.windows.net:1433;database=sqldb-rcit-rhk-ucp-dev-01;user=sqladmin@sql-rcit-rhk-ucp-dev-01;password=Password1234;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.username=sqladmin
+spring.datasource.password=Password1234
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+
+
