--- a/src/main/resources/persistence-local.properties
+++ b/src/main/resources/persistence-local.properties
@@ -1,18 +1,16 @@
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-
 # Datasource
 spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-
 spring.h2.console.settings.web-allow-others=true
 
