add code for redis

--- a/src/main/resources/persistence-dev.properties
+++ b/src/main/resources/persistence-dev.properties
@@ -10,4 +10,17 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 
+# Redis config for Spring 2.X
+spring.redis.database=0
+spring.redis.host=redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net
+spring.redis.port=16379
+spring.redis.password=6hd1nTkCU7VFJy7wVtmsa9Z8Yh1fUyTAvAzCaPwZH98=
+spring.redis.timeout=60000
+
+# Redis config for Spring 3.X
+spring.data.redis.database=0
+spring.data.redis.host=redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net
+spring.data.redis.port=16379
+spring.data.redis.password=6hd1nTkCU7VFJy7wVtmsa9Z8Yh1fUyTAvAzCaPwZH98=
+spring.data.redis.timeout=60000
 
