--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ repositories {
 
 ext {
 	set('springCloudAzureVersion', "5.8.0")
+	set("embedded-redis.version","0.6")
+	set("redisson.version","3.20.0")
+	set("jedis.version","5.0.2")
+	set("epoll.version","4.1.90.Final")
 }
 
 dependencies {
@@ -34,6 +38,7 @@ dependencies {
 
 	implementation 'jakarta.persistence:jakarta.persistence-api'
 	runtimeOnly 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.7.11'
 
 	implementation 'org.springframework.retry:spring-retry'
 	implementation 'mysql:mysql-connector-java:8.0.26'
@@ -46,9 +51,13 @@ dependencies {
 	implementation 'com.google.guava:guava:33.0.0-jre'
 	implementation 'net.sourceforge.htmlunit:htmlunit'
 	implementation 'org.modelmapper:modelmapper:3.2.0'
-
+	implementation 'redis.clients:jedis:5.1.0'
+	implementation 'com.github.kstyrc:embedded-redis:${embedded-redis.version}'
+	implementation 'org.redisson:redisson:${redisson.version}'
+	implementation 'io.lettuce:lettuce-core'
+	implementation 'io.netty:netty-transport-native-epoll:${epoll.version}'
+	testImplementation 'redis.embedded:embedded-redis:embedded-redis-0.3'
 }
-
 dependencyManagement {
 	imports {
 		mavenBom "com.azure.spring:spring-cloud-azure-dependencies:${springCloudAzureVersion}"
