--- a/src/main/resources/persistence-local.properties
+++ b/src/main/resources/persistence-local.properties
@@ -16,15 +16,15 @@ spring.h2.console.settings.web-allow-others=true
 
 # Redis config for Spring 2.X
 spring.redis.database=0
-spring.redis.host=redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net
-spring.redis.port=16379
-spring.redis.password=6hd1nTkCU7VFJy7wVtmsa9Z8Yh1fUyTAvAzCaPwZH98=
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=password
 spring.redis.timeout=60000
 
 # Redis config for Spring 3.X
 spring.data.redis.database=0
-spring.data.redis.host=redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net
-spring.data.redis.port=16379
-spring.data.redis.password=6hd1nTkCU7VFJy7wVtmsa9Z8Yh1fUyTAvAzCaPwZH98=
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=password
 spring.data.redis.timeout=60000
 
