--- a/src/main/resources/persistence-local.properties
+++ b/src/main/resources/persistence-local.properties
@@ -23,7 +23,8 @@ spring.redis.timeout=60000
 
 # Redis config for Spring 3.X
 spring.data.redis.database=0
-spring.data.redis.host=localhost
+spring.data.redis.host=${REDIS_HOST:localhost}
+#spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=password
 spring.data.redis.timeout=60000
