--- a/src/main/resources/persistence-dev.properties
+++ b/src/main/resources/persistence-dev.properties
@@ -12,15 +12,19 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 
 # Redis config for Spring 2.X
 spring.redis.database=0
+#spring.redis.url=rediss://WNFw2HCiNdGfqCSd3F67i83kupi8tnKK5AzCaLfD3f0=@redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net:6380
 spring.redis.host=redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net
-spring.redis.port=16379
-spring.redis.password=6hd1nTkCU7VFJy7wVtmsa9Z8Yh1fUyTAvAzCaPwZH98=
-spring.redis.timeout=60000
+spring.redis.port=6380
+spring.redis.password=WNFw2HCiNdGfqCSd3F67i83kupi8tnKK5AzCaLfD3f0=
+spring.redis.url=rediss://${spring.redis.password}@${spring.data.host}:${spring.data.port}
+spring.redis.timeout=30000
 
 # Redis config for Spring 3.X
 spring.data.redis.database=0
+#spring.data.redis.url=rediss://WNFw2HCiNdGfqCSd3F67i83kupi8tnKK5AzCaLfD3f0=@redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net:6380
 spring.data.redis.host=redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net
-spring.data.redis.port=16379
-spring.data.redis.password=6hd1nTkCU7VFJy7wVtmsa9Z8Yh1fUyTAvAzCaPwZH98=
-spring.data.redis.timeout=60000
+spring.data.redis.port=6380
+spring.data.redis.password=WNFw2HCiNdGfqCSd3F67i83kupi8tnKK5AzCaLfD3f0=
+spring.data.redis.url=rediss://${spring.data.redis.password}@${spring.data.redis.host}:${spring.data.redis.port}
+spring.data.redis.timeout=30000
 
