--- a/compose.yaml
+++ b/compose.yaml
@@ -25,6 +25,7 @@ services:
       - SPRING_DATASOURCE_DRIVERCLASSNAME=com.microsoft.sqlserver.jdbc.SQLServerDriver
       - SPRING_DATASOURCE_USERNAME=sa
       - SPRING_DATASOURCE_PASSWORD=<YourStrong@Passw0rd>
+      - APPLICATIONINSIGHTS_CONNECTION_STRING=InstrumentationKey=ec537f86-2187-4c12-b82e-fd0ff98ce011;IngestionEndpoint=https://eastasia-0.in.applicationinsights.azure.com/;LiveEndpoint=https://eastasia.livediagnostics.monitor.azure.com/
       - env=local
     networks:
       - springbootservernetwork
