set hibernate.hbm2ddl.auto=create-drop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.security.user.name=sa
 spring.security.user.password=password
 
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create-drop
 
 
