--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
   spring-boot-server:
     container_name: spring-boot-server
-    restart: no
+    restart: always
     build: .
 #    depends_on:
 #      - mssql
