--- a/src/main/resources/persistence-dev.properties
+++ b/src/main/resources/persistence-dev.properties
@@ -6,7 +6,7 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=sqladmin
 spring.datasource.password=Password1234
 
-spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 
@@ -28,3 +28,4 @@ spring.data.redis.password=WNFw2HCiNdGfqCSd3F67i83kupi8tnKK5AzCaLfD3f0=
 spring.data.redis.url=rediss://${spring.data.redis.password}@${spring.data.redis.host}:${spring.data.redis.port}
 spring.data.redis.timeout=30000
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
