--- a/compose.yaml
+++ b/compose.yaml
@@ -16,7 +16,7 @@ services:
 #    volumes:
 #      - /Users/ubuntu/workspace/benapi_django:/Users/ubuntu/workspace/benapi_django
 #    env_file: .env
-    image: ghcr.io/chicheongweng/spring-boot-server:latest
+#    image: ghcr.io/chicheongweng/spring-boot-server:latest
     pull_policy: always
 
     environment:
