fix db settings for MYSQL in compose.yaml

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
   spring-boot-server:
     container_name: spring-boot-server
-    restart: always
+    restart: no
     build: .
 #    depends_on:
 #      - mssql
@@ -23,16 +23,20 @@ services:
       - SPRING_DATA_REDIS_HOST=redis
       - SPRING_DATA_REDIS_PORT=6379
       - SPRING_DATA_REDIS_PASSWORD=password
+
+      - HIBERNATE_DIALECT=org.hibernate.dialect.SQLServer2012Dialect
       - SPRING_DATASOURCE_URL=jdbc:sqlserver://mssql:1433;encrypt=true;trustServerCertificate=true;hostNameInCertificate=*;loginTimeout=30;
       - SPRING_DATASOURCE_DRIVERCLASSNAME=com.microsoft.sqlserver.jdbc.SQLServerDriver
       - SPRING_DATASOURCE_USERNAME=sa
       - SPRING_DATASOURCE_PASSWORD=<YourStrong@Passw0rd>
+      - SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.SQLServer2012Dialect
+      - SPRING_JPA_HIBERNATE_DLL_AUTO=create
+      - SPRING_JPA_SHOW_SQL=true
+
       - APPLICATIONINSIGHTS_CONNECTION_STRING=InstrumentationKey=ec537f86-2187-4c12-b82e-fd0ff98ce011;IngestionEndpoint=https://eastasia-0.in.applicationinsights.azure.com/;LiveEndpoint=https://eastasia.livediagnostics.monitor.azure.com/
       - env=local
     networks:
       - dockerdatanetwork
-    volumes:
-      - ${HOME}/workspace/spring-boot-server:${HOME}/workspace/spring-boot-server
 
 
 networks:
