--- a/src/main/resources/persistence-dev.properties
+++ b/src/main/resources/persistence-dev.properties
@@ -1,10 +1,15 @@
+azure.keyvault.uri=https://<your-key-vault-name>.vault.azure.net/
+azure.keyvault.tenant-id=<your-tenant-id>
+azure.keyvault.client-id=<your-client-id>
+azure.keyvault.client-secret=<your-client-secret>
+
 hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
 # Datasource
 spring.datasource.url=jdbc:sqlserver://sql-rcit-rhk-ucp-dev-01.database.windows.net:1433;database=sqldb-rcit-rhk-ucp-dev-01;user=sqladmin@sql-rcit-rhk-ucp-dev-01;password=Password1234;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=sqladmin
-spring.datasource.password=Password1234
+spring.datasource.password=${sqldb-rcit-rhk-ucp-dev-01-password}
 
 #spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 #spring.jpa.hibernate.ddl-auto=create
@@ -15,7 +20,7 @@ spring.redis.database=0
 #spring.redis.url=rediss://WNFw2HCiNdGfqCSd3F67i83kupi8tnKK5AzCaLfD3f0=@redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net:6380
 spring.redis.host=redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net
 spring.redis.port=6380
-spring.redis.password=WNFw2HCiNdGfqCSd3F67i83kupi8tnKK5AzCaLfD3f0=
+spring.redis.password=${redis-rcit-rhk-ucp-dev-01-accesskey}
 spring.redis.url=rediss://${spring.redis.password}@${spring.data.host}:${spring.data.port}
 spring.redis.timeout=30000
 
@@ -24,7 +29,7 @@ spring.data.redis.database=0
 #spring.data.redis.url=rediss://WNFw2HCiNdGfqCSd3F67i83kupi8tnKK5AzCaLfD3f0=@redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net:6380
 spring.data.redis.host=redis-rcit-rhk-ucp-dev-01.redis.cache.windows.net
 spring.data.redis.port=6380
-spring.data.redis.password=WNFw2HCiNdGfqCSd3F67i83kupi8tnKK5AzCaLfD3f0=
+spring.data.redis.password=${redis-rcit-rhk-ucp-dev-01-accesskey}
 spring.data.redis.url=rediss://${spring.data.redis.password}@${spring.data.redis.host}:${spring.data.redis.port}
 spring.data.redis.timeout=30000
 
