--- a/build.gradle
+++ b/build.gradle
@@ -72,8 +72,8 @@ dependencies {
 	testImplementation 'it.ozimov:embedded-redis:0.7.3'
 	runtimeOnly group: 'io.netty', name: 'netty-resolver-dns-native-macos', version: '4.1.104.Final', classifier: 'osx-aarch_64'
 	runtimeOnly group: 'io.netty', name: 'netty-resolver-dns-native-macos', version: '4.1.104.Final', classifier: 'osx-x86_64'
-
-	implementation 'com.azure.spring:azure-spring-boot-starter-keyvault-secrets'
+	implementation 'com.azure:azure-identity'
+	implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault'
 }
 dependencyManagement {
 	imports {
