--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ java {
 
 repositories {
 	mavenCentral()
+	maven {
+		url 'https://repo.spring.io/milestone'
+	}
 }
 
 task printSourceSetInformation(){
@@ -73,6 +76,7 @@ dependencies {
 	runtimeOnly group: 'io.netty', name: 'netty-resolver-dns-native-macos', version: '4.1.104.Final', classifier: 'osx-aarch_64'
 	runtimeOnly group: 'io.netty', name: 'netty-resolver-dns-native-macos', version: '4.1.104.Final', classifier: 'osx-x86_64'
 	implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault'
+	implementation 'com.azure.spring:azure-spring-boot-starter-keyvault-secrets:3.6.0'
 }
 dependencyManagement {
 	imports {
