tidy up application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,6 @@ hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create-drop
 
 spring.cloud.azure.keyvault.secret.endpoint=https://kv-rcit-rhk-ucp-dev-01.vault.azure.net/
-
-spring.cloud.azure.keyvault.secret.property-sources[0].endpoint=https://kv-rcit-rhk-ucp-dev-01.vault.azure.net/
+spring.cloud.azure.keyvault.secret.property-sources[0].endpoint=${spring.cloud.azure.keyvault.secret.endpoint}
 
 
