--- a/build.gradle
+++ b/build.gradle
@@ -38,44 +38,44 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'com.azure.spring:spring-cloud-azure-starter'
-	implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory'
-	implementation 'com.azure.spring:spring-cloud-azure-starter-data-cosmos'
-	implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault'
-	implementation 'com.azure.spring:spring-cloud-azure-starter-storage'
+	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+	implementation 'com.azure.spring:spring-cloud-azure-starter:5.0.0'
+	implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory:5.0.0'
+	implementation 'com.azure.spring:spring-cloud-azure-starter-data-cosmos:4.6.0'
+	implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault:5.0.0'
+	implementation 'com.azure.spring:spring-cloud-azure-starter-storage:5.0.0'
 //	implementation 'org.liquibase:liquibase-core'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
-	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus:1.10.5'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
 
-	implementation 'jakarta.persistence:jakarta.persistence-api'
-	runtimeOnly 'com.h2database:h2'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+	runtimeOnly 'com.h2database:h2:2.1.214'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.7.11'
 
-	implementation 'org.springframework.retry:spring-retry'
+	implementation 'org.springframework.retry:spring-retry:2.0.0'
 	implementation 'mysql:mysql-connector-java:8.0.26'
-	implementation 'com.google.code.gson:gson'
+	implementation 'com.google.code.gson:gson:2.10.1'
 	implementation group: 'io.swagger', name: 'swagger-annotations', version: '2.0.0-rc1'
-	implementation 'org.springframework.boot:spring-boot-starter-json'
+	implementation 'org.springframework.boot:spring-boot-starter-json:3.1.0'
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
-	implementation 'org.projectlombok:lombok'
+	implementation 'org.projectlombok:lombok:1.18.26'
 	implementation 'com.google.guava:guava:33.0.0-jre'
-	implementation 'net.sourceforge.htmlunit:htmlunit'
+	implementation 'net.sourceforge.htmlunit:htmlunit:2.70.0'
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 	implementation 'redis.clients:jedis:5.1.0'
 	implementation 'org.redisson:redisson:3.25.2'
 	testImplementation 'com.github.kstyrc:embedded-redis:0.6'
-	implementation 'io.lettuce:lettuce-core'
+	implementation 'io.lettuce:lettuce-core:6.2.3.RELEASE'
 	implementation 'io.netty:netty-transport-native-epoll:4.1.104.Final'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 	testImplementation 'it.ozimov:embedded-redis:0.7.3'
 	runtimeOnly group: 'io.netty', name: 'netty-resolver-dns-native-macos', version: '4.1.104.Final', classifier: 'osx-aarch_64'
 	runtimeOnly group: 'io.netty', name: 'netty-resolver-dns-native-macos', version: '4.1.104.Final', classifier: 'osx-x86_64'
-	implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault'
+	implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault:5.0.0'
 }
 dependencyManagement {
 	imports {
