refactor hibernate related code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.reactor.debug-agent.enabled=true
 spring.security.user.name=sa
 spring.security.user.password=password
 
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 spring.cloud.azure.keyvault.secret.endpoint=https://kv-rcit-rhk-ucp-dev-01.vault.azure.net/
 spring.cloud.azure.keyvault.secret.credential.client-id=f2077429-9df5-4176-880b-4638949ab6e1
