--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
 # Datasource
 spring.datasource.url=jdbc:sqlserver://sql-rcit-rhk-ucp-dev-01.database.windows.net:1433;database=sqldb-rcit-rhk-ucp-dev-01;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
