--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.security.user.name=sa
 spring.security.user.password=password
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 spring.cloud.azure.keyvault.secret.endpoint=https://kv-rcit-rhk-ucp-dev-01.vault.azure.net/
 spring.cloud.azure.keyvault.secret.credential.client-id=f2077429-9df5-4176-880b-4638949ab6e1
