--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,15 +1,15 @@
 # Datasource
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:sqlserver://mssql:1433;encrypt=true;trustServerCertificate=true;hostNameInCertificate=*;loginTimeout=30;
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=<YourStrong@Passw0rd>
 
 # Redis config for Spring 3.X
 spring.data.redis.database=0
-spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.password=password
-spring.data.redis.timeout=60000
+spring.data.redis.timeout=30000
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
