--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.security.user.password=password
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.cloud.azure.keyvault.secret.endpoint=https://kv-rcit-rhk-ucp-dev-01.vault.azure.net/
+spring.cloud.azure.keyvault.secret.endpoint=https://kv-rcit-rhk-ucp-${SPRING_PROFILES_ACTIVE:dev}-01.vault.azure.net/
 spring.cloud.azure.keyvault.secret.credential.client-id=f2077429-9df5-4176-880b-4638949ab6e1
 spring.cloud.azure.keyvault.secret.credential.client-secret=Kpc8Q~w4m.t2e_qv3Gq6s-klnlnSiUB13-OpQdx.
 spring.cloud.azure.keyvault.secret.profile.tenant-id=4f63aaa0-5612-4fe8-8175-9f9f4d26c7b4
